tooling/nargo_cli/tests/compile_failure/raw_string_huge/src/main.nr
fn main() {
    let _a = r##############################################################################################################################################################################################################################################################################"hello"##############################################################################################################################################################################################################################################################################;
}
